# compusar

./: .gitmodules  CompuSar.xpr  ControlCpu.xpr  Makefile  README.md  sim_top_behav.wcfg  top.prm
CompuSar.sim/display32_sim/: display32_sim_top_behav.wcfg
CompuSar.srcs/constrs_1/new/: board.xdc
CompuSar.srcs/display32_sim/: display32_sim_top_behav.wcfg
CompuSar.srcs/display32_sim/new/: display32_sim_top.sv  memory.mem
CompuSar.srcs/display_sim/: display_sim_8.wcfg  display_sim_top_behav.wcfg
CompuSar.srcs/display_sim/new/: display_sim_top.sv
CompuSar.srcs/saros/: boot_loader.mem  boot_loader_state.mem
CompuSar.srcs/saros/bl1/: ddr.cpp
CompuSar.srcs/saros/common/: gpio.cpp
CompuSar.srcs/saros/include/: bitmap.h  display.h  gpio.h  irq.h
CompuSar.srcs/saros/include/saros/sync/: signal.h
CompuSar.srcs/saros/saros/: Makefile.am  apple2.cpp  apple2.h  apple2_display.cpp  apple2_display.h  display.cpp  irq.cpp  main.cpp  saros.ld
CompuSar.srcs/saros/saros/roms/: assemblify
CompuSar.srcs/saros/tools/: charromdump  png2source
CompuSar.srcs/sim_1/: sim_top_behav.wcfg
CompuSar.srcs/sources_1/ip/character_rom/: character_rom.xci
CompuSar.srcs/sources_1/ip/mig_ddr_ctrl/: mig_ddr_ctrl.xci
CompuSar.srcs/sources_1/new/: clk_converter.sv  display.sv  display_32bit.sv  display_8bit.sv  display_aggregator.sv  display_serial.sv  gpio.sv  hdmi_wrapper.sv  io_block.sv  seg_display.sv  top.sv
ControlCpu.srcs/: memory_map
ControlCpu.srcs/constrs_1/new/: board.xdc  memory.xdc
ControlCpu.srcs/saros/: boot_loader.mem  boot_loader_state.mem
ControlCpu.srcs/saros/bl1/: Makefile.am  bl1.ld  bl1_main.cpp  memtest.cpp
ControlCpu.srcs/saros/include/: 8bit_hook.h
ControlCpu.srcs/saros/saros/: Makefile.am  apple2.cpp  irq.cpp  main.cpp  saros.ld
ControlCpu.srcs/sources_1/ip/ddr3/: ddr3.xci  mig_a.prj
ControlCpu.srcs/sources_1/new/: clk_converter.sv  gpio.sv  input_delay.sv  io_block.sv  top.sv  uart_ctrl.sv
(+2 files in other folders)
